force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Steps</relationshipLabel>
    <relationshipName>Onboarding_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>