force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Account_Name__c</fullName>
    <formula>Onboarding__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Account Name</label>
    <type>Text</type>
</CustomField>