force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Opportunity_Name__c</fullName>
    <formula>Onboarding__r.Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Opportunity Name</label>
    <type>Text</type>
</CustomField>