force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <formula>TEXT(Onboarding__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Status</label>
    <type>Text</type>
</CustomField>