force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding_Step_Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step_Template_Category__c</fullName>
    <formula>Onboarding__r.Onboarding_Step_Template_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Step Template Category</label>
    <type>Text</type>
</CustomField>