force-app/main/default/objects/Onboarding_Step__c/fields/Onboarding_Step_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step_Template_Version__c</fullName>
    <formula>Onboarding__r.Onboarding_Step_Template_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Step Template Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>