force-app/main/default/objects/Onboarding_Step__c/fields/Step_Category__c.field-meta.xml
<CustomField>
    <fullName>Step_Category__c</fullName>
    <label>Step Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>