force-app/main/default/objects/Onboarding_Step__c/fields/Step_Weight__c.field-meta.xml
<CustomField>
    <fullName>Step_Weight__c</fullName>
    <label>Step Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>