force-app/main/default/objects/Onboarding_Step__c/validationRules/Comment_Not_Blank_For_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_Not_Blank_For_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Comment__c),  ISPICKVAL(Status__c,&quot;Completed&quot;), ISCHANGED(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Add a comment before moving status to Completed.</errorMessage>
</ValidationRule>