force-app/main/default/objects/Onboarding_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Account_Name__c</columns>
    <columns>Onboarding_Opportunity_Name__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Comment__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>