force-app/main/default/objects/Onboarding_Step__c/listViews/Operations_Onboarding_Step.listView-meta.xml
<ListView>
    <fullName>Operations_Onboarding_Step</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Account_Name__c</columns>
    <columns>Onboarding_Opportunity_Name__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Operations</label>
    <queue>Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>